--- a/sokha-mall-master/assets/lang/en.json
+++ b/sokha-mall-master/assets/lang/en.json
@@ -173,6 +173,7 @@
     "mp1y": "Make a profit in 1 year",
     "choosetowithdraw": "Choose to withdraw profit and principal",
     "openevery" :"Open every",
-    "Money to be paid" :"Money to be paid"
-
+    "Money to be paid" :"Money to be paid",
+    "profit_from_invest" : "Profit from Investment",
+    "Member" : "Member Benefits"
 }
