--- a/sokha-mall-master/assets/lang/km.json
+++ b/sokha-mall-master/assets/lang/km.json
@@ -173,8 +173,8 @@
     "mp1y": "ផ្តល់ប្រាក់ចំណេញក្នុង​ ១ឆ្នាំ",
     "choosetowithdraw": "ជ្រើសរើសដកប្រាក់ចំណេញ​ និងប្រាក់ដើម",
     "openevery" :"បើកប្រាក់រាល់ (ខែ)",
-    "Money to be paid" :"ប្រាក់ត្រូវបើក"
-
-
+    "Money to be paid" :"ប្រាក់ត្រូវបើក",
+    "profit_from_invest" : "ប្រាក់ចំណេញពីវិនិយោគទុន",
+    "Member" : "អត្ថប្រយោជន៍សមាជិក"
 
 }
